--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://VitaliiChichuga.github.io/goit-js-hw-12-countries-main",
+  "homepage": "https://vitaliichichuga.github.io/goit-js-hw-12-countries-main",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-12-countries-main/"
